fixed code wrapping

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -353,5 +353,5 @@ blockquote {
 }
 
 code {
-    white-space: pre-wrap
+    white-space: pre-wrap !important;
 }
